# ascent-interpreter

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  POLISH.md  README.md  TODO.md  flake.nix
.claude/: settings.json
benches/: interpreter.rs
crates/ascent-eval/: Cargo.toml
crates/ascent-eval/src/: aggregators.rs  bytecode.rs  compiled.rs  error.rs  eval.rs  expr.rs  intern.rs  jit_index.rs  lib.rs  relation.rs  serde_bridge.rs  specialized.rs  value.rs
crates/ascent-eval/src/jit/: asm_codegen.rs  codegen.rs  helpers.rs  layout.rs  mod.rs  packed_codegen.rs  packed_helpers.rs  storage.rs  stratum_codegen.rs  tests.rs
crates/ascent-ir/: Cargo.toml
crates/ascent-ir/src/: lib.rs
crates/ascent-ir/tests/: fuzz_pipeline.rs
crates/ascent-syntax/: Cargo.toml
crates/ascent-syntax/src/: desugar.rs  lib.rs  syn_utils.rs  syntax.rs  utils.rs
crates/ascent-syntax/tests/: proptest.rs
docs/: index.md  package.json
docs/.vitepress/: config.ts
docs/guide/: embedding.md  getting-started.md  writing-programs.md
docs/reference/: architecture.md  syntax.md  types.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_parser.rs  fuzz_pipeline.rs
fuzz/seeds/: aggregation  condition  disjunction  facts  generator  lattice  let_binding  negation  repeated_vars  transitive_closure  wildcards
src/: ir.rs  lib.rs  main.rs
src/eval/: aggregators.rs  bytecode.rs  compiled.rs  engine.rs  error.rs  expr.rs  intern.rs  jit_index.rs  mod.rs  relation.rs  serde_bridge.rs  specialized.rs  value.rs
src/eval/jit/: asm_codegen.rs  layout.rs  mod.rs  packed_helpers.rs  rel_index.rs  storage.rs  tests.rs
src/syntax/: ast.rs  desugar.rs  mod.rs  syn_utils.rs  utils.rs
tests/: ascent_compat.rs  comparison.rs  fuzz_pipeline.rs  incremental.rs  macro_parity.rs  proptest_syntax.rs  syntax_parity.rs
