[workspace]
resolver = "2"
members = ["crates/*"]
exclude = ["fuzz"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/pterror/ascent-interpreter"

[workspace.dependencies]
ascent-syntax = { path = "crates/ascent-syntax" }
ascent-ir = { path = "crates/ascent-ir" }
ascent-eval = { path = "crates/ascent-eval" }

syn = { version = "2.0", features = ["full", "derive", "extra-traits", "visit-mut"] }
proc-macro2 = "1.0"
quote = "1.0"
derive-syn-parse = "0.2"
itertools = "0.14"
petgraph = "0.6"
serde = { version = "1", features = ["derive"] }

[package]
name = "ascent-interpreter"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Interpreter and JIT for Ascent Datalog programs"

[dependencies]
ascent-syntax.workspace = true
ascent-ir.workspace = true
ascent-eval.workspace = true
syn.workspace = true

[dev-dependencies]
ascent = "0.8"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "interpreter"
harness = false
