[workspace]
resolver = "2"
exclude = ["fuzz"]

[package]
name = "ascent-interpreter"
version = "0.1.4"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/pterror/ascent-interpreter"
description = "Interpreter and JIT for Ascent Datalog programs"

[dependencies]
syn = { version = "2.0", features = ["full", "derive", "extra-traits", "visit-mut"] }
proc-macro2 = "1.0"
quote = "1.0"
derive-syn-parse = "0.2"
itertools = "0.14"
petgraph = "0.6"
rustc-hash = "2"
hashbrown = "0.16"
serde = { version = "1", features = ["derive"], optional = true }
dynasmrt = { version = "5", optional = true }

[features]
default = ["jit-asm"]
serde = ["dep:serde"]
specialized = []
jit = []
jit-asm = ["jit", "specialized", "dep:dynasmrt"]

[package.metadata.docs.rs]
all-features = false
features = ["jit-asm", "serde"]

[dev-dependencies]
ascent = "0.8"
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1"

[[bench]]
name = "interpreter"
harness = false

[profile.dev]
debug = 0

[profile.bench]
debug = 2
strip = "none"
