[package]
name = "ascent-eval"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Semi-naive evaluation engine for Ascent interpreter"

[dependencies]
ascent-ir.workspace = true
ascent-syntax.workspace = true
syn.workspace = true
itertools.workspace = true
petgraph.workspace = true
rustc-hash.workspace = true
hashbrown.workspace = true
serde = { workspace = true, optional = true }
cranelift-codegen = { version = "0.116", optional = true }
cranelift-frontend = { version = "0.116", optional = true }
cranelift-module = { version = "0.116", optional = true }
cranelift-jit = { version = "0.116", optional = true }
target-lexicon = { version = "0.13", optional = true }

[features]
serde = ["dep:serde"]
specialized = []
jit = ["dep:cranelift-codegen", "dep:cranelift-frontend", "dep:cranelift-module", "dep:cranelift-jit", "dep:target-lexicon"]
