[package]
name = "ascent-eval"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Semi-naive evaluation engine for Ascent interpreter"

[dependencies]
ascent-ir.workspace = true
ascent-syntax.workspace = true
syn.workspace = true
itertools.workspace = true
petgraph.workspace = true
rustc-hash.workspace = true
hashbrown.workspace = true
serde = { workspace = true, optional = true }
dynasmrt = { version = "5", optional = true }

[features]
serde = ["dep:serde"]
specialized = []
jit = []
jit-asm = ["jit", "specialized", "dep:dynasmrt"]
