[package]
name = "ascent-ir"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Intermediate representation for Ascent interpreter"

[dependencies]
ascent-syntax.workspace = true
syn.workspace = true
proc-macro2.workspace = true
quote.workspace = true
itertools.workspace = true
