[package]
name = "ascent-syntax"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Parser for Ascent Datalog syntax"

[dependencies]
syn.workspace = true
proc-macro2.workspace = true
quote.workspace = true
derive-syn-parse.workspace = true
itertools.workspace = true
